--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,36 @@
 }
 .bgglobal{
   /* width: 1912px; */
-  height: 2985px;
+  /* height: 2985px; */
   background: #000c15;
 }
 
 /* style partie 1 */
-div.partie1{
-  background-image:url(bg1.png);
+.partie1{
+  background-image:url(../images/bg1.png);
   background-repeat: no-repeat;
   background-size: contain;
   height: 850px;
 }
+/* .partie1::after{
+  content: "";
+  top: 0;
+  position: absolute;
+  background: linear-gradient(to bottom,black,transparent);
+  width: 100%;
+  height: 20%;
+  z-index:0;  
+} */
+.partie1::before{
+  content: "";
+  top: 0;
+  position: absolute;
+  background: linear-gradient(to bottom,black,transparent);
+  width: 100%;
+  height: 2%;
+  z-index: 1;  
+}
+
 .header{
   border-bottom:1px solid #f3e2ba ;
   height: 75px;
@@ -43,7 +62,7 @@ h4 span{
   margin-top: 15px;
   display: flex;
   height: 284px;
-  width: 453px;
+  width: 450px;
   background:black;
   opacity: 0.2;
 }
@@ -58,7 +77,8 @@ h4 span{
 
 /* style partie 2 */
 .partie2{
-height: 380px;
+height: 400px;
+width: 100%;
 }
 .p2box{
   margin-left: 50px;
@@ -75,18 +95,61 @@ height: 380px;
 }
 /* style partie 3 */
 .partie3{
- height: 832px;
+ height: 500px;
 }
-
+.partie3{
+  background-image:url(../images/Background.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 850px;
+}
 /* style partie 4 */
 .partie4{
- height: 139px;
+  height: 300px;
+}
+.partie4 .row{
+  margin:0px 110PX;
+  margin-left:150px;
+}
+.p4box{
+  margin-top: 50px;
+  height: 200px;
+  margin-right: 100px;
+  /* background:antiquewhite; */
 }
 
+.p4box h2 a{
+  color: #f3e2ba;
+  text-decoration: none;
+}
+.p4box h6 a{
+  color:white;
+  text-decoration: none;
+}
+.p4box ul li{
+  list-style-type: none;
+  margin:7px ;
+}
+.palet{
+  width: 100%;
+  height: 80px;
+  background:#172128;
+}
+.myinput{
+  margin-left: 30px;
+ background: #2d2d2d;
+ border: none;
+}
+.mydiv{
+  background: #c09a78;
+  border: none;
+}
 
-
-
-
+footer{
+  height: 150px;
+  padding-top: 30px;
+  background: #000a12;
+}
 
 
 
